# athenian

./: .pre-commit-config.yaml  .pylintrc  alembic.ini  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
apps/entities/: base.py
apps/entities/imports/: managers.py  schemas.py  validator.py
apps/entities/teams/: managers.py  schemas.py
core/: contexts.py  redis.py  types.py  utils.py
core/settings/: __init__.py  base.py  db.py  projects.py  redis.py
db/: __init__.py  utils.py
db/models/: __init__.py  imports.py  project.py  team_data.py
db/queries/: base.py
migrations/: env.py
migrations/versions/: 0001_initial.py
services/api/: deps.py  main.py  utils.py
services/api/tests/: tests_import.py
services/api/tests/test_files/: invalid_file_2.csv  invalid_file_3.csv  invalid_file_4.csv  invalid_file_5.csv
services/api/v1/team_data/: endpoints.py
